--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
@@ -30,9 +30,9 @@
                 <span asp-validation-for="EmailAdress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmailAdress" class="control-label"></label>
-                <input asp-for="EmailAdress" class="form-control" />
-                <span asp-validation-for="EmailAdress" class="text-danger"></span>
+                <label asp-for="SerialNumber" class="control-label"></label>
+                <input asp-for="SerialNumber" class="form-control" />
+                <span asp-validation-for="SerialNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
