Person class renamed to form

--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@model UmbracoProjekt.Models.Person
+@model UmbracoProjekt.Models.Form
 
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Submit Form";
+    ViewData["Title"] = "Enter Draw";
 }
 
 <h2>Create</h2>
