--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
@@ -1,50 +1,17 @@
 ﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@model UmbracoProjekt.Models.Form
+@model IEnumerable<UmbracoProjekt.Models.Form>
 
 @{
     Layout = "_Layout";
     ViewData["Title"] = "Enter Draw";
 }
 
-<h2>Create</h2>
-
-<h4>Exercise</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmailAdress" class="control-label"></label>
-                <input asp-for="EmailAdress" class="form-control" />
-                <span asp-validation-for="EmailAdress" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SerialNumber" class="control-label"></label>
-                <input asp-for="SerialNumber" class="form-control" />
-                <span asp-validation-for="SerialNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="Index" asp-controller="Home">Back to frontpage</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+<h1>Forms</h1>
+@foreach (var form in Model)
+{
+    <h4>Form number: @form.Id</h4>
+    <p>First name: @form.FirstName</p>
+    <p>Last name: @form.LastName</p>
+    <p>Email adress: @form.EmailAdress</p>
+    <p>Serial number: @form.SerialNumber</p>
 }
