--- a/UmbracoProjekt/UmbracoProjekt/Views/Shared/_Layout.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+@addTagHelper *, UmbracoProjekt
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -23,6 +25,24 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <form id="logout" action="@Url.Action("Logout", "Account")" method="post">
+                                    <button type="submit" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Logout</button>
+                                </form>
+                            }
+                            else
+                            {
+                                <a href="@Url.Action("Login", "Account")" title="log in" class="w3-bar-item w3-button w3-hide-small w3-hover-white">
+                                    Login
+                                </a>
+                                <a href="@Url.Action("Register", "Account")" class="w3-bar-item w3-button w3-hide-small w3-hover-white">
+                                    Register
+                                </a>
+
+                            }
                         </li>
                     </ul>
                 </div>
