--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Create.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@model UmbracoProjekt.Models.Form
+@model Draw.Form
 
 @{
     Layout = "_Layout";
