--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
-@model PaginatedList<UmbracoProjekt.Models.Form>
+@model PaginatedList<Draw.Form>
 
 @{
     ViewData["Title"] = "Index";
