--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Create.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Create.cshtml
@@ -28,12 +28,17 @@
                 <span asp-validation-for="EmailAdress" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Age" class="control-label"></label>
+                <input asp-for="Age" class="form-control" />
+                <span asp-validation-for="Age" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="SerialNumber" class="control-label"></label>
                 <input asp-for="SerialNumber" class="form-control" />
                 <span asp-validation-for="SerialNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn-default" />
             </div>
         </form>
     </div>
