--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/CreateNumbers.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/CreateNumbers.cshtml
@@ -4,5 +4,5 @@
 @using (Html.BeginForm())
 {
     <p>Enter number: @Html.TextBox("count")</p>
-<input type="submit" value="Submit" />
+    <input type="submit" value="Submit" class="btn-default" />
 }
