--- a/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Form/Index.cshtml
@@ -15,8 +15,8 @@
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <p>
-            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
-            <input type="submit" value="Search" class="btn btn-default" /> |
+            Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" class="btn-default" />
+            <input type="submit" value="Search" class="btn-default" /> |
             <a asp-action="Index">Back to Full List</a>
         </p>
     </div>
@@ -56,11 +56,6 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.SerialNumber)
                 </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
             </tr>
         }
     </tbody>
@@ -75,13 +70,13 @@
    asp-route-sortOrder="@ViewData["CurrentSort"]"
    asp-route-pageNumber="@(Model.PageIndex - 1)"
    asp-route-currentFilter="@ViewData["CurrentFilter"]"
-   class="btn btn-default @prevDisabled">
+   class="btn-default @prevDisabled">
     Previous
 </a>
 <a asp-action="Index"
    asp-route-sortOrder="@ViewData["CurrentSort"]"
    asp-route-pageNumber="@(Model.PageIndex + 1)"
    asp-route-currentFilter="@ViewData["CurrentFilter"]"
-   class="btn btn-default @nextDisabled">
+   class="btn-default @nextDisabled">
     Next
 </a>
