--- a/UmbracoProjekt/UmbracoProjekt/Views/Shared/_Layout.cshtml
+++ b/UmbracoProjekt/UmbracoProjekt/Views/Shared/_Layout.cshtml
@@ -24,11 +24,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="Create">Draw</a>
                         </li>
+
 
                         @if (User.Identity.IsAuthenticated)
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="Index">Forms</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Form" asp-action="CreateNumbers">Make Serialnumbers</a>
+                            </li>
                             <li class="nav-item">
                                 <form id="logout" action="@Url.Action("Logout", "Account")" method="post">
                                     <button type="submit" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Logout</button>
@@ -49,7 +56,7 @@
                             </li>
 
                         }
-                        </ul>
+                    </ul>
                 </div>
             </div>
         </nav>
